clients/ffi/include/tarwyn.h

#define XT_ERR_NULL -1
#define XT_ERR_UTF8 -2
#define XT_ERR_NO_VALUE -3
#define XT_ERR_WRONG_TYPE -4
#define XT_ERR_PANIC -5
typedef struct Handle Handle;
int xt_get_double(const struct Handle *handle, const char *channel, double *out);
int xt_subscribe_ring(struct Handle *handle,
                      const char *channel,
                      size_t records,
                      size_t record_bytes,
                      uint64_t *out_id);
int xt_unsubscribe(struct Handle *handle, uint64_t id);
void *xt_ring_base(const struct Handle *handle, uint64_t id);
int xt_ring_write_index(const struct Handle *handle, uint64_t id, uint64_t *out);