clients/java-client/gen/org/tarwyn/ffi/tarwyn_h.java


    /**
     * {@snippet lang=c :
     * int xt_get_double(const struct Handle *handle, const char *channel, double *out)
     * }
     */
    public static int xt_get_double(MemorySegment handle, MemorySegment channel, MemorySegment out) {
        var mh$ = xt_get_double.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_get_double", handle, channel, out);
            }
            return (int)mh$.invokeExact(handle, channel, out);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_subscribe_ring {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_LONG,
            tarwyn_h.C_LONG,
            tarwyn_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_subscribe_ring");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_subscribe_ring(struct Handle *handle, const char *channel, size_t records, size_t record_bytes, uint64_t *out_id)
     * }
     */
    public static FunctionDescriptor xt_subscribe_ring$descriptor() {
        return xt_subscribe_ring.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_subscribe_ring(struct Handle *handle, const char *channel, size_t records, size_t record_bytes, uint64_t *out_id)
     * }
     */
    public static MethodHandle xt_subscribe_ring$handle() {
        return xt_subscribe_ring.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_subscribe_ring(struct Handle *handle, const char *channel, size_t records, size_t record_bytes, uint64_t *out_id)
     * }
     */
    public static MemorySegment xt_subscribe_ring$address() {
        return xt_subscribe_ring.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_subscribe_ring(struct Handle *handle, const char *channel, size_t records, size_t record_bytes, uint64_t *out_id)
     * }
     */
    public static int xt_subscribe_ring(MemorySegment handle, MemorySegment channel, long records, long record_bytes, MemorySegment out_id) {
        var mh$ = xt_subscribe_ring.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_subscribe_ring", handle, channel, records, record_bytes, out_id);
            }
            return (int)mh$.invokeExact(handle, channel, records, record_bytes, out_id);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_unsubscribe {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_unsubscribe");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_unsubscribe(struct Handle *handle, uint64_t id)
     * }
     */
    public static FunctionDescriptor xt_unsubscribe$descriptor() {
        return xt_unsubscribe.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_unsubscribe(struct Handle *handle, uint64_t id)
     * }
     */
    public static MethodHandle xt_unsubscribe$handle() {
        return xt_unsubscribe.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_unsubscribe(struct Handle *handle, uint64_t id)
     * }
     */
    public static MemorySegment xt_unsubscribe$address() {
        return xt_unsubscribe.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_unsubscribe(struct Handle *handle, uint64_t id)
     * }
     */
    public static int xt_unsubscribe(MemorySegment handle, long id) {
        var mh$ = xt_unsubscribe.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_unsubscribe", handle, id);
            }
            return (int)mh$.invokeExact(handle, id);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_ring_base {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_ring_base");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void *xt_ring_base(const struct Handle *handle, uint64_t id)
     * }
     */
    public static FunctionDescriptor xt_ring_base$descriptor() {
        return xt_ring_base.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void *xt_ring_base(const struct Handle *handle, uint64_t id)
     * }
     */
    public static MethodHandle xt_ring_base$handle() {
        return xt_ring_base.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void *xt_ring_base(const struct Handle *handle, uint64_t id)
     * }
     */
    public static MemorySegment xt_ring_base$address() {
        return xt_ring_base.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void *xt_ring_base(const struct Handle *handle, uint64_t id)
     * }
     */
    public static MemorySegment xt_ring_base(MemorySegment handle, long id) {
        var mh$ = xt_ring_base.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_ring_base", handle, id);
            }
            return (MemorySegment)mh$.invokeExact(handle, id);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_ring_write_index {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_LONG,
            tarwyn_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_ring_write_index");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_ring_write_index(const struct Handle *handle, uint64_t id, uint64_t *out)
     * }
     */
    public static FunctionDescriptor xt_ring_write_index$descriptor() {
        return xt_ring_write_index.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_ring_write_index(const struct Handle *handle, uint64_t id, uint64_t *out)
     * }
     */
    public static MethodHandle xt_ring_write_index$handle() {
        return xt_ring_write_index.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_ring_write_index(const struct Handle *handle, uint64_t id, uint64_t *out)
     * }
     */
    public static MemorySegment xt_ring_write_index$address() {
        return xt_ring_write_index.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_ring_write_index(const struct Handle *handle, uint64_t id, uint64_t *out)
     * }
     */
    public static int xt_ring_write_index(MemorySegment handle, long id, MemorySegment out) {
        var mh$ = xt_ring_write_index.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_ring_write_index", handle, id, out);
            }
            return (int)mh$.invokeExact(handle, id, out);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }
    private static final int XT_ERR_NULL = (int)-1L;
    /**
     * {@snippet lang=c :
     * #define XT_ERR_NULL -1
     * }
     */
    public static int XT_ERR_NULL() {
        return XT_ERR_NULL;
    }
    private static final int XT_ERR_UTF8 = (int)-2L;
    /**
     * {@snippet lang=c :
     * #define XT_ERR_UTF8 -2
     * }
     */
    public static int XT_ERR_UTF8() {
        return XT_ERR_UTF8;
    }
    private static final int XT_ERR_NO_VALUE = (int)-3L;
    /**
     * {@snippet lang=c :
     * #define XT_ERR_NO_VALUE -3
     * }
     */
    public static int XT_ERR_NO_VALUE() {
        return XT_ERR_NO_VALUE;
    }
    private static final int XT_ERR_WRONG_TYPE = (int)-4L;
    /**
     * {@snippet lang=c :
     * #define XT_ERR_WRONG_TYPE -4
     * }
     */
    public static int XT_ERR_WRONG_TYPE() {
        return XT_ERR_WRONG_TYPE;
    }
    private static final int XT_ERR_PANIC = (int)-5L;
    /**
     * {@snippet lang=c :
     * #define XT_ERR_PANIC -5
     * }
     */
    public static int XT_ERR_PANIC() {
        return XT_ERR_PANIC;
    }
}

